Switch to auth to use cert

--- a/atlas_online_archive.ipynb
+++ b/atlas_online_archive.ipynb
@@ -43,17 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Settings loaded from .env file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Install dependencies\n",
+    "!pip install --upgrade pip\n",
+    "!pip install python-dotenv\n",
+    "!pip install faker\n",
+    "!pip install --upgrade pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Imports\n",
     "import time\n",
@@ -71,13 +76,10 @@
     "# Constants loaded from .env file\n",
     "MDB_CONNECTION = settings.MDB_CONNECTION\n",
     "MDB_CONNECTION_ARCHIVE = settings.MDB_CONNECTION_ARCHIVE\n",
+    "PEM_FILE = settings.PEM_FILE\n",
     "MDB_DATABASE = settings.MDB_DATABASE\n",
     "MDB_COLLECTION = settings.MDB_COLLECTION\n",
-    "NUM_DOCS = settings.NUM_DOCS\n",
-    "API_PUBLIC_KEY = settings.API_PUBLIC_KEY\n",
-    "API_PRIVATE_KEY = settings.API_PRIVATE_KEY\n",
-    "PROJECT_ID = settings.PROJECT_ID\n",
-    "CLUSTER_NAME = settings.CLUSTER_NAME"
+    "NUM_DOCS = settings.NUM_DOCS\n"
    ]
   },
   {
@@ -89,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_cluster_collection():\n",
-    "    mongo_client = MongoClient(MDB_CONNECTION)\n",
+    "    mongo_client = MongoClient(MDB_CONNECTION, ssl_certfile=PEM_FILE)\n",
     "    db = mongo_client[MDB_DATABASE]\n",
     "    return db[MDB_COLLECTION]\n",
     "\n",
@@ -103,126 +105,18 @@
     "    archive_db = mongo_client_archive[MDB_DATABASE]\n",
     "    return archive_db[MDB_COLLECTION]\n",
     "\n",
-    "# Determine if archive needs to be built (or rebuilt)\n",
-    "def rebuild_archive():\n",
+    "# Verity records still remain in the cluster.\n",
+    "def refresh_needed():\n",
     "    \n",
-    "    # The archive doesn't exist\n",
-    "    if (get_archive_id() == 0):\n",
-    "        return True\n",
-    "    \n",
-    "    # If the archive exists, ensure there are still unarchived documents for the demo\n",
+    "    # Ensure there are still unarchived documents for the demo\n",
     "    my_collection = get_cluster_collection()\n",
-    "    if (my_collection.count_documents({}) == 0):\n",
+    "    records = my_collection.count_documents({})\n",
+    "    if ( records == 0):\n",
+    "        print ('There are no records in the cluster')\n",
     "        return True\n",
     "    else:\n",
+    "        print ('There are ' + str(records) + ' documents in the cluster')\n",
     "        return False\n",
-    "\n",
-    "def get_archive_id():\n",
-    "    url = \"https://cloud.mongodb.com/api/atlas/v1.0/groups/\" + PROJECT_ID +\"/clusters/\" + CLUSTER_NAME  +\"/onlineArchives\"\n",
-    "    resp = requests.get(url, auth=HTTPDigestAuth(API_PUBLIC_KEY, API_PRIVATE_KEY))\n",
-    "\n",
-    "    if (resp.ok):\n",
-    "\n",
-    "        archives = json.loads(resp.content)\n",
-    "        #print (\"There are {0} online archive(s)\".format(len(archives)))\n",
-    "\n",
-    "        for archive in archives:\n",
-    "\n",
-    "            # There can only be one online archive per collection.\n",
-    "            if (archive['dbName'] == MDB_DATABASE and archive['collName'] == MDB_COLLECTION):\n",
-    "                return archive['_id']\n",
-    "            else:\n",
-    "                return 0;\n",
-    "        \n",
-    "        return 0;\n",
-    "\n",
-    "    else:\n",
-    "        print(resp)\n",
-    "        \n",
-    "def get_archive_state(id):\n",
-    "        \n",
-    "    url = \"https://cloud.mongodb.com/api/atlas/v1.0/groups/\" + PROJECT_ID +\"/clusters/\" + CLUSTER_NAME  +\"/onlineArchives/\" + str(id)\n",
-    "    resp = requests.get(url, auth=HTTPDigestAuth(API_PUBLIC_KEY, API_PRIVATE_KEY))\n",
-    "\n",
-    "    if (resp.ok):\n",
-    "        return resp.json()['state']\n",
-    "\n",
-    "    else:\n",
-    "        print(resp)\n",
-    "        \n",
-    "def delete_archive(archive_id):\n",
-    "\n",
-    "    url = \"https://cloud.mongodb.com/api/atlas/v1.0/groups/\" + PROJECT_ID +\"/clusters/\" + CLUSTER_NAME  +\"/onlineArchives/\" + archive_id\n",
-    "    resp = requests.delete(url, auth=HTTPDigestAuth(API_PUBLIC_KEY, API_PRIVATE_KEY))\n",
-    "\n",
-    "    if (resp.ok):\n",
-    "        wait = 60\n",
-    "        print (\"Giving archive \" + str(wait) + \" seconds to delete.\", end=\"\")\n",
-    "        for x in range(wait):            \n",
-    "            time.sleep(1) # Allowance for deletion to complete\n",
-    "            print(\".\", end=\"\")\n",
-    "            x = x+1\n",
-    "        print(\"Deleted existing archive\")  \n",
-    "\n",
-    "    else:\n",
-    "        print(resp) \n",
-    "        \n",
-    "def create_archive():\n",
-    "    date_field = \"dateAccessed\"\n",
-    "\n",
-    "    url = \"https://cloud.mongodb.com/api/atlas/v1.0/groups/\" + PROJECT_ID +\"/clusters/\" + CLUSTER_NAME  +\"/onlineArchives\"\n",
-    "\n",
-    "    data = {\n",
-    "            \"dbName\": MDB_DATABASE,\n",
-    "            \"collName\": MDB_COLLECTION,\n",
-    "            \"partitionFields\": [\n",
-    "                  {\n",
-    "                          \"fieldType\": \"string\",\n",
-    "                          \"fieldName\": \"userName\",\n",
-    "                          \"order\": 0\n",
-    "                  },                  \n",
-    "                  {\n",
-    "                          \"fieldType\": \"string\",\n",
-    "                          \"fieldName\": \"httpMethod\",\n",
-    "                          \"order\": 0\n",
-    "                  }],    \n",
-    "            \"criteria\": {\n",
-    "                  \"dateField\": date_field,\n",
-    "                  \"expireAfterDays\": 30\n",
-    "              }\n",
-    "    }\n",
-    "    headers = {\"content-type\":\"application/json\"}\n",
-    "\n",
-    "    resp = requests.post(url, auth=HTTPDigestAuth(API_PUBLIC_KEY, API_PRIVATE_KEY), json=data, headers=headers)\n",
-    "\n",
-    "    if resp.ok:\n",
-    "        print(\"Archive Created\")\n",
-    "        #print(resp.json())\n",
-    "        \n",
-    "    elif resp.status == 500:\n",
-    "        print(\"The server returned an error, but the archive was probably created. Please validate using the Atlas UI.\")\n",
-    "\n",
-    "    else:\n",
-    "       print(resp)    \n",
-    "    \n",
-    "\n",
-    "# Wait for archive to become active\n",
-    "def wait_for_active_archive(archive_id):\n",
-    "    \n",
-    "    state = get_archive_state(archive_id) \n",
-    "    if (state == 'ACTIVE'):\n",
-    "        print(state)\n",
-    "    else:\n",
-    "        print (\"Waiting for archive to build\",  end=\"\")\n",
-    "\n",
-    "    while state != 'ACTIVE':\n",
-    "        state = get_archive_state(archive_id) \n",
-    "        print(\".\", end=\"\")    \n",
-    "        if (state == 'ACTIVE'):\n",
-    "            print (\"\\n\" + state)\n",
-    "            break;\n",
-    "        else:\n",
-    "            time.sleep(1)    \n",
     "            \n",
     "def generate_events():\n",
     "    fake = Faker()\n",
@@ -237,9 +131,7 @@
     "\n",
     "    print('NUM DOCS TO GENERATE: ' + str(NUM_DOCS))\n",
     "\n",
-    "    mongo_client = MongoClient(MDB_CONNECTION)\n",
-    "    db = mongo_client[MDB_DATABASE]\n",
-    "    my_collection = db[MDB_COLLECTION]\n",
+    "    my_collection = get_cluster_collection()\n",
     "\n",
     "    # Remove the existing documents (don't drop the collection from underneath the archive)\n",
     "    my_collection.delete_many({})\n",
@@ -277,7 +169,7 @@
     "    print('===============================')    \n",
     "              \n",
     "def get_archive_date():\n",
-    "    return datetime.datetime.now() - timedelta(30)\n",
+    "    return datetime.datetime.now() - datetime.timedelta(30)\n",
     "\n",
     "def print_row(count, source):\n",
     "    formatted_count = str(count).rjust(5)\n",
@@ -286,66 +178,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_cluster_archive_collection()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Archive Test and Setup\n",
     "\n",
-    "If the cluster still contains unarchived events, the demo's good to go. Otherwise, the archive will be rebuilt. This way the demo's consistent and there's always 1000 documents to work with across the cluster and the archive. set ```force_rebuilt = TRUE``` to start from scratch. Note, if attempting to demo this live, it can take several minutes for documents to archive after the archive is created."
+    "If the cluster still contains unarchived events, the demo's good to go. Otherwise, the archive should be rebuilt. To keep the demo consistent, we'll keep 1000 records in the collection, across the cluster and the archive. \n",
+    "\n",
+    "To rebuild the demo, delete and recreate the Online Archive (the archive itself is immutable).\n",
+    "\n",
+    "<img src=\"./images/config_archive.png\">\n",
+    "\n",
+    "Then open a new cell and run the ```generate_events()``` funcction. *Note, I played with using a flag that could be set to call this function, but I kept forgetting to unset the flag and generating more events. Forcing the creatiion of cell for this uncommon event should prevent this.*\n",
+    "\n",
+    "Note, if attempting to demo this live, it can take several minutes for documents to archive after the archive is created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No archive to delete\n",
-      "<Response [500]>\n",
-      "Waiting for archive to build......................................................................................\n",
-      "ACTIVE\n",
-      "================================\n",
-      "   Generating Sample IoT Data   \n",
-      "================================\n",
-      "\n",
-      "Starting 2020-07-15 14:16:59\n",
-      "\n",
-      "NUM DOCS TO GENERATE: 1000\n",
-      "........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................\n",
-      "Ending 2020-07-15 14:17:39\n",
-      "===============================\n",
-      "Total Time Elapsed (in seconds): 39.91534021999999\n",
-      "===============================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "force_rebuild = True\n",
-    "\n",
-    "if (rebuild_archive() or force_rebuild):    \n",
-    "\n",
-    "    ## Delete Existing Archive \n",
-    "    archive_id = get_archive_id()\n",
-    "    if (archive_id):\n",
-    "            delete_archive(archive_id)\n",
-    "    else:\n",
-    "        print(\"No archive to delete\")\n",
-    "\n",
-    "    ## Create New Archive\n",
-    "    create_archive()\n",
-    "\n",
-    "    # Wait for archive to become active\n",
-    "    archive_id = get_archive_id()\n",
-    "    wait_for_active_archive(archive_id)\n",
+    "if refresh_needed(): \n",
     "    \n",
-    "    # Generate events\n",
-    "    generate_events()\n",
+    "    print ('\\nRecreate the Online Archive:')\n",
+    "    print ('   Step 1: Delete and Online Archive.')\n",
+    "    print ('   Step 2: Return here, open a new cell and run the generate_events() function.')\n",
+    "    print ('   Step 3: Create the Online Archive.')\n",
     "    \n",
     "else:\n",
-    "    print (\"Demo is ready\")\n"
+    "    print (\"Online Archive is ready to demo!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_events()"
    ]
   },
   {
@@ -353,43 +234,35 @@
    "metadata": {},
    "source": [
     "## Cluster Query\n",
-    "Query the cluster's document count."
+    "Query the cluster's document count. In the case of a demo refresh, the function will wait until the archive of documents has been completed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for documents to archive\n",
-      "................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_collection = get_cluster_collection()\n",
     "\n",
-    "cluster_count = my_collection.count_documents({})\n",
+    "archive_date = get_archive_date()\n",
+    "query = {'dateAccessed':{'$lt': archive_date}}\n",
     "\n",
-    "if cluster_count == 1000:\n",
-    "    print (\"Waiting for documents to archive:\")\n",
-    "    \n",
-    "    while cluster_count == 1000:\n",
-    "        print(\".\", end=\"\")\n",
+    "docs_waiting_for_archive = my_collection.count_documents(query)\n",
+    "\n",
+    "if docs_waiting_for_archive > 0:\n",
+    "    print (str(docs_waiting_for_archive) + \" documents remaining to be archived\")   \n",
+    "\n",
+    "    while docs_waiting_for_archive > 0:\n",
+    "        current_docs_waiting_for_archive = my_collection.count_documents(query)\n",
+    "        if current_docs_waiting_for_archive < docs_waiting_for_archive:\n",
+    "            print (str(current_docs_waiting_for_archive) + \" documents remaining to be archived\")\n",
+    "            docs_waiting_for_archive = current_docs_waiting_for_archive\n",
+    "        else:\n",
+    "            print(\".\", end=\"\")    \n",
     "        time.sleep(1)\n",
-    "\n",
-    "print(\"Archive has begun:\")\n",
-    "cluster_count = my_collection.count_documents({})\n",
-    "print_row (cluster_count, \"Total number of documents in the Atlas Cluster\")\n",
-    "\n",
-    "# While the document count is shrinking\n",
-    "while my_collection.count_documents({}) < cluster_count:\n",
-    "    print_row (count, \"Total number of documents in the Atlas Cluster\")\n",
-    "    time.sleep(1)\n",
+    "else:\n",
+    "    print(\"Archive complete. \" + str(my_collection.count_documents({})) + \" documents remain in the Atlas Cluster\")\n",
     "    "
    ]
   },
@@ -424,6 +297,13 @@
     "print('------')\n",
     "print_row(my_collection_archive.count_documents({}), \"Total number of documents across the Atlas Cluster and Online Archive\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
