--- a/atlas_online_archive.ipynb
+++ b/atlas_online_archive.ipynb
@@ -48,17 +48,26 @@
    "outputs": [],
    "source": [
     "# Install dependencies\n",
-    "!pip install --upgrade pip\n",
-    "!pip install python-dotenv\n",
-    "!pip install faker\n",
-    "!pip install --upgrade pymongo"
+    "!sudo -E pip install --upgrade pip\n",
+    "!sudo -E pip install python-dotenv\n",
+    "!sudo -E pip install faker\n",
+    "!sudo -E pip install --upgrade pymongo\n",
+    "!sudo -E pip install dnspython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Settings loaded from .env file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import time\n",
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,15 +187,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_cluster_archive_collection()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,9 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 123 documents in the cluster\n",
+      "Online Archive is ready to demo!\n"
+     ]
+    }
+   ],
    "source": [
     "if refresh_needed(): \n",
     "    \n",
@@ -218,15 +227,6 @@
     "    \n",
     "else:\n",
     "    print (\"Online Archive is ready to demo!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generate_events()"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
