Improved the documentation

--- a/atlas_online_archive.ipynb
+++ b/atlas_online_archive.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "[Atlas Online Archive](https://docs.atlas.mongodb.com/online-archive/manage-online-archive/) moves infrequently accessed immutable data from your Atlas cluster to MongoDB-managed read-only blob storage without user action. Once Atlas archives the data, you have a unified view of your Atlas and Online Archive data.\n",
     "\n",
+    "<img src=\"./images/online_archive_architecture.png\">\n",
+    "\n",
     "In this demo we will generate 1000 IoT events for the current year. Here's an example event:\n",
     "\n",
     "```JSON\n",
@@ -57,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Settings loaded from .env file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "import time\n",
@@ -80,6 +74,7 @@
     "import requests\n",
     "from requests.auth import HTTPDigestAuth\n",
     "import json\n",
+    "import pprint\n",
     "\n",
     "\n",
     "# Constants loaded from .env file\n",
@@ -100,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +172,30 @@
     "    print('Total Time Elapsed (in seconds): ' + str(end - start))\n",
     "    print('===============================')    \n",
     "              \n",
+    "\n",
+    "# Use after a new archive is created to verify the data has been archived.\n",
+    "def wait_for_data_to_archive():\n",
+    "    my_collection = get_cluster_collection()\n",
+    "\n",
+    "    archive_date = get_archive_date()\n",
+    "    query = {'dateAccessed':{'$lt': archive_date}}\n",
+    "\n",
+    "    docs_waiting_for_archive = my_collection.count_documents(query)\n",
+    "\n",
+    "    if docs_waiting_for_archive > 0:\n",
+    "        print (str(docs_waiting_for_archive) + \" documents remaining to be archived\")   \n",
+    "\n",
+    "        while docs_waiting_for_archive > 0:\n",
+    "            current_docs_waiting_for_archive = my_collection.count_documents(query)\n",
+    "            if current_docs_waiting_for_archive < docs_waiting_for_archive:\n",
+    "                print (str(current_docs_waiting_for_archive) + \" documents remaining to be archived\")\n",
+    "                docs_waiting_for_archive = current_docs_waiting_for_archive\n",
+    "            else:\n",
+    "                print(\".\", end=\"\")    \n",
+    "            time.sleep(1)\n",
+    "    else:\n",
+    "        print(\"Archive complete. \" + str(my_collection.count_documents({})) + \" documents remain in the Atlas Cluster\")    \n",
+    "        \n",
     "def get_archive_date():\n",
     "    return datetime.datetime.now() - datetime.timedelta(30)\n",
     "\n",
@@ -200,23 +219,14 @@
     "\n",
     "Then open a new cell and run the ```generate_events()``` funcction. *Note, I played with using a flag that could be set to call this function, but I kept forgetting to unset the flag and generating more events. Forcing the creatiion of cell for this uncommon event should prevent this.*\n",
     "\n",
-    "Note, if attempting to demo this live, it can take several minutes for documents to archive after the archive is created."
+    "Note, if attempting to demo this live, it can take several minutes for documents to archive after the archive is created. You can run the ```wait_for_data_to_archive()``` function to verify the demo is ready."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 123 documents in the cluster\n",
-      "Online Archive is ready to demo!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if refresh_needed(): \n",
     "    \n",
@@ -234,7 +244,8 @@
    "metadata": {},
    "source": [
     "## Cluster Query\n",
-    "Query the cluster's document count. In the case of a demo refresh, the function will wait until the archive of documents has been completed."
+    "\n",
+    "With our archive configuration, the cluster only contains 30 days of events. Let's validate that's true by counting the number of documents older than 30 days..."
    ]
   },
   {
@@ -248,22 +259,17 @@
     "archive_date = get_archive_date()\n",
     "query = {'dateAccessed':{'$lt': archive_date}}\n",
     "\n",
-    "docs_waiting_for_archive = my_collection.count_documents(query)\n",
+    "print ('All documents older than ' + str(archive_date.date()) + ' have been archived.\\n')\n",
     "\n",
-    "if docs_waiting_for_archive > 0:\n",
-    "    print (str(docs_waiting_for_archive) + \" documents remaining to be archived\")   \n",
+    "print ('A query for documents older than ' + str(archive_date.date()) + ' should return zero.\\n')\n",
     "\n",
-    "    while docs_waiting_for_archive > 0:\n",
-    "        current_docs_waiting_for_archive = my_collection.count_documents(query)\n",
-    "        if current_docs_waiting_for_archive < docs_waiting_for_archive:\n",
-    "            print (str(current_docs_waiting_for_archive) + \" documents remaining to be archived\")\n",
-    "            docs_waiting_for_archive = current_docs_waiting_for_archive\n",
-    "        else:\n",
-    "            print(\".\", end=\"\")    \n",
-    "        time.sleep(1)\n",
-    "else:\n",
-    "    print(\"Archive complete. \" + str(my_collection.count_documents({})) + \" documents remain in the Atlas Cluster\")\n",
-    "    "
+    "query = {'dateAccessed':{'$lt': archive_date}}\n",
+    "doc_count = my_collection.count_documents(query)\n",
+    "print (str(doc_count) + ' documents returned from the query\\n')\n",
+    "\n",
+    "print (\"Here's an example document:\\n\")\n",
+    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "pp.pprint(my_collection.find_one())"
    ]
   },
   {
@@ -272,6 +278,42 @@
    "source": [
     "## Cluster and Online Archive\n",
     "\n",
+    "Atlas now provides two connection options: **Connect to Cluster** and **Connect to Cluster and Online Archive**:\n",
+    "\n",
+    "<img src=\"./images/connection_options.png\">\n",
+    "\n",
+    "Connecting to the Cluster and Online Archive will give you a unified view of the documents. Let's see..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish a connection to the Cluster and Online Archive\n",
+    "my_collection_archive = get_cluster_archive_collection()\n",
+    "\n",
+    "archive_date = get_archive_date()\n",
+    "query = {'dateAccessed':{'$lt': archive_date}}\n",
+    "\n",
+    "print ('All documents older than ' + str(archive_date.date()) + ' have been archived.\\n')\n",
+    "\n",
+    "print ('A query for documents older than ' + str(archive_date.date()) + ' should return documents.\\n')\n",
+    "\n",
+    "doc_count = my_collection_archive.count_documents(query)\n",
+    "print (str(doc_count) + ' documents returned from the query\\n')\n",
+    "\n",
+    "print (\"Here's an example document from the archive:\\n\")\n",
+    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "pp.pprint(my_collection_archive.find_one(query))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some Math Across the Cluster an Online Archive\n",
     "While the Atlas Cluster has some subset of the documents, there are still 1000 documents across the cluster and archive."
    ]
   },
@@ -282,9 +324,10 @@
    "outputs": [],
    "source": [
     "# Establish a connection to the Cluster and Online Archive\n",
-    "archive_date = get_archive_date()\n",
-    "my_collection = get_cluster_collection()\n",
     "my_collection_archive = get_cluster_archive_collection()\n",
+    "\n",
+    "archive_date = get_archive_date()\n",
+    "query = {'dateAccessed':{'$lt': archive_date}}\n",
     "\n",
     "cluster_count = my_collection.count_documents({'dateAccessed':{'$lt': archive_date}})\n",
     "cluster_archive_count = my_collection_archive.count_documents({'dateAccessed':{'$lt': archive_date}})\n",
@@ -297,13 +340,6 @@
     "print('------')\n",
     "print_row(my_collection_archive.count_documents({}), \"Total number of documents across the Atlas Cluster and Online Archive\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
